--- a/package.json
+++ b/package.json
@@ -2,24 +2,35 @@
   "name": "dgb-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/dgb-ui.umd.js",
+  "module": "dist/dgb-ui.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "docs:components": "vitepress-rc"
+    "docs:components": "vitepress-rc",
+    "build:lib": "vite build"
   },
   "keywords": [],
   "author": "coisini",
   "license": "ISC",
   "devDependencies": {
     "vitepress": "^1.5.0",
-    "vitepress-theme-demoblock": "^3.0.7"
+    "vitepress-theme-demoblock": "^3.0.7",
+    "sass": "^1.69.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "vite": "^4.0.0",
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0",
+    "vue-tsc": "^1.8.0",
+    "@types/vue": "^2.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vue/runtime-core": "^3.4.0"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.9.0",
-    "vue": "^3.4.10",
-    "sass": "1.56.1"
+    "vue": "^3.4.10"
   }
 }
