feat: 新增后台组件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,5 @@
     "docs/.vitepress/**/*.vue",
     "vite.config.ts",
     "packages/types/*.d.ts"
-  ]
+, "docs/hooks/useAuthorityRouting.ts"  ]
 } 
