--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   "author": "coisini",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/vue": "^2.0.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/runtime-core": "^3.4.0",
+    "sass": "^1.69.0",
+    "typescript": "^5.0.0",
+    "vite": "^4.0.0",
     "vitepress": "^1.5.0",
     "vitepress-theme-demoblock": "^3.0.7",
-    "sass": "^1.69.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.0.0",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "vue-tsc": "^1.8.0",
-    "@types/vue": "^2.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/runtime-core": "^3.4.0"
+    "vue-tsc": "^1.8.0"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
